@@ -1,7 +1,12 @@
 2009-07-22  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/bridge.py (SignRpmRequestType.forward_reply_payload): close()
+	tmp_file to force it to be written to disk, flush() apparently isn't
+	enough.
+
 	* src/bridge.py (SignRpmRequestType.__koji_get_session): Authenticate
 	when connecting to Koji.
+
 	* README (server): Update.
 
 	* src/bridge.py (main): Fix pid file removal.
